--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
             <artifactId>pngdecoder</artifactId>
             <version>1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.joml</groupId>
+            <artifactId>joml</artifactId>
+            <version>1.7.1</version>
+        </dependency>
     </dependencies>
 
 
