--- a/pom.xml
+++ b/pom.xml
@@ -6,24 +6,26 @@
 
     <groupId>org.studios.abstract</groupId>
     <artifactId>org.studios.abstract</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <lwjgl.version>3.1.2</lwjgl.version>
+        <lwjgl.version>3.1.5</lwjgl.version>
+        <joml.version>1.9.7</joml.version>
+        <pngdecoder.version>1.0</pngdecoder.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.l33tlabs.twl</groupId>
             <artifactId>pngdecoder</artifactId>
-            <version>1.0</version>
+            <version>${pngdecoder.version}</version>
         </dependency>
         <dependency>
             <groupId>org.joml</groupId>
             <artifactId>joml</artifactId>
-            <version>1.9.3</version>
+            <version>${joml.version}</version>
         </dependency>
         <dependency>
             <groupId>org.lwjgl</groupId>
